changes made from theia lab environment

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <button onclick="compute()">Compute Interest</button>
              <span id="result"> 
              </span>
-
+             <footer>
+                &#169; Ⓒ Everyone Can Get Rich 
+            </footer>
     </div>
     <br>
-    <footer>
-        &#169; This Calculator belongs to --Viktor Bereziouk--
-    </footer>
+    
 
 </html>
