--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
              <span id="result"> 
              </span>
              <footer>
-                &#169; Ⓒ Everyone Can Get Rich 
+                Ⓒ Everyone Can Get Rich 
             </footer>
     </div>
     <br>
